--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "the-lyman-hall-theater",
   "version": "1.0.0",
-  "description": "",
+  "description": "T6 Case Problem 3",
   "main": "index.html",
   "license": "MIT",
   "author": "Hesbon Osoro <hesbonosoro1@gmail.com>",
